# json_ROOT_exporter

./: .gitignore  CMakeLists.txt
General/: CMakeLists.txt
General/include/: Exporter.h
General/source/: BaseShapes.cpp  Exporter.cpp  main.cpp
General/test/: Exporter_test.cpp
